Updated images to be fluid and fixed UI

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="col-12 col-md-8 order-1 order-md-2 px-2 px-md-5">
         <img
           src="images/andrea-davis-IWfe63thJxk-unsplashmain.jpg"
-          class="main-img"
+          class="main-img img-fluid"
         />
       </div>
       <div
@@ -169,9 +169,12 @@
           <div class="col-12 col-md-6">
             <div class="row no-gutters">
               <div class="col-3">
-                <img src="images/meritt-thomas-_YxDGcDm4Hs-unsplash.jpg" />
+                <img
+                  src="images/meritt-thomas-_YxDGcDm4Hs-unsplash.jpg"
+                  class="img-fluid"
+                />
               </div>
-              <div class="col-9">
+              <div class="col-9 px-2">
                 <a
                   class="teaser-link"
                   href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
@@ -186,9 +189,12 @@
           <div class="col-12 col-md-6">
             <div class="row no-gutters">
               <div class="col-3">
-                <img src="images/kinga-howard-s4aOPAJ4v0E-unsplash.jpg" />
+                <img
+                  src="images/kinga-howard-s4aOPAJ4v0E-unsplash.jpg"
+                  class="img-fluid"
+                />
               </div>
-              <div class="col-9">
+              <div class="col-9 px-2">
                 <a
                   class="teaser-link"
                   href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
@@ -202,9 +208,12 @@
           <div class="col-12 col-md-6">
             <div class="row no-gutters">
               <div class="col-3">
-                <img src="images/francesca-tosolini-tHkJAMcO3QE-unsplash.jpg" />
+                <img
+                  src="images/francesca-tosolini-tHkJAMcO3QE-unsplash.jpg"
+                  class="img-fluid"
+                />
               </div>
-              <div class="col-9">
+              <div class="col-9 px-2">
                 <a
                   class="teaser-link"
                   href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
@@ -220,9 +229,10 @@
               <div class="col-3">
                 <img
                   src="images/boxed-water-is-better-9EdFe3Dahuk-unsplash.jpg"
+                  class="img-fluid"
                 />
               </div>
-              <div class="col-9">
+              <div class="col-9 px-2">
                 <a
                   class="teaser-link"
                   href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
@@ -236,11 +246,7 @@
           </div>
         </div>
       </div>
-      <div
-        class="d-none d-md-flex col-md-auto ml-auto mr-auto"
-        style="border-left: 1px solid gray"
-      ></div>
-      <div class="col-12 col-md-auto mb-4 mb-md-0">
+      <div class="col-12 col-md-3 mb-4 mb-md-0">
         <h3 class="social-media">Follow Us</h3>
         <p>Get the latest news and travel inspiration.</p>
         <div class="fa">
@@ -276,7 +282,10 @@
     <div class="carousel row no-gutters">
       <div class="col-4">
         <div class="px-2">
-          <img src="images/kyle-glenn-xY4r7y-Cllo-unsplash.jpg" />
+          <img
+            src="images/kyle-glenn-xY4r7y-Cllo-unsplash.jpg"
+            class="img-fluid"
+          />
           <a
             href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
           >
@@ -287,7 +296,10 @@
       </div>
       <div class="col-4">
         <div class="px-2">
-          <img src="images/roberto-nickson-4IjUugITk1o-unsplashnew.jpg" />
+          <img
+            src="images/roberto-nickson-4IjUugITk1o-unsplashnew.jpg"
+            class="img-fluid"
+          />
           <a
             href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
           >
@@ -298,7 +310,10 @@
       </div>
       <div class="col-4">
         <div class="px-2">
-          <img src="images/roberto-nickson-so3wgJLwDxo-unsplashnew.jpg" />
+          <img
+            src="images/roberto-nickson-so3wgJLwDxo-unsplashnew.jpg"
+            class="img-fluid"
+          />
           <a
             href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
           >
@@ -358,163 +373,218 @@
       </div>
       <div class="row no-gutters">
         <div class="col-12 col-md-4">
-          <div class="categories-teaser">
-            <img src="images/taylor-heery-8DlbPCxfGHA-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Hosts generated over $2 billion in tax revenue
-            </a>
-            <p>April 12, 2023</p>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="categories-teaser">
-            <img src="images/benjamin-suter-S-x1RbdoCtU-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Bobby Berk surprises new Host as her first guest
-            </a>
-            <p>April 5, 2023</p>
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/taylor-heery-8DlbPCxfGHA-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Hosts generated over $2 billion in tax revenue
+              </a>
+              <p>April 12, 2023</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-4">
-          <div class="categories-teaser">
-            <img
-              src="images/fransiskus-filbert-mangundap-l8OKlH71Xh0-unsplashnew.jpg"
-            />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Introducing our 2023 Airbnb Entrepreneurship
-            </a>
-            <p>April 4, 2023</p>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/inera-isovic-Y6lwa7g0MGk-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Introducing our 2023 Airbnb Overseas
-            </a>
-            <p>April 10, 2023</p>
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/benjamin-suter-S-x1RbdoCtU-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Bobby Berk surprises new Host as her first guest
+              </a>
+              <p>April 5, 2023</p>
+            </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/andrea-davis-VOWXF7lsAN0-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Airbnb welcomes progress on EU short-term rental rules
-            </a>
-            <p>April 4, 2023</p>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/karsten-winegeart-wZl_4UIzmho-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Live in the movies without a movie star budget
-            </a>
-            <p>March 25, 2023</p>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/martin-sanchez-hl3av6oAURg-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              10 architectural gems that are bookable on Airbnb
-            </a>
-            <p>March 15, 2023</p>
+        <div class="col-12 col-md-4">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/fransiskus-filbert-mangundap-l8OKlH71Xh0-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Introducing our 2023 Airbnb Entrepreneurship
+              </a>
+              <p>April 4, 2023</p>
+            </div>
           </div>
         </div>
 
         <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/clay-banks-V-v_DBDtFIc-unsplashnew.jpg" />
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/inera-isovic-Y6lwa7g0MGk-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Introducing our 2023 Airbnb Overseas
+              </a>
+              <p>April 10, 2023</p>
+            </div>
           </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Design on a dime: The top private rooms and Design listings under
-              $100
-            </a>
-            <p>March 12, 2023</p>
+        </div>
+
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/andrea-davis-VOWXF7lsAN0-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Airbnb welcomes progress on EU short-term rental rules
+              </a>
+              <p>April 4, 2023</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/andrea-davis-1uNh3B3ppl4-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Give Mae the evening off and spend the night at Ted Lasso’s
-              favorite place
-            </a>
-            <p>March 7 2023</p>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/alexa-west-dUPfhP18dPI-unsplashnew.jpg" />
-          </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              New rural travel data in North Carolina shows economic benefits of
-              hosting
-            </a>
-            <p>March 4, 2023</p>
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/karsten-winegeart-wZl_4UIzmho-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Live in the movies without a movie star budget
+              </a>
+              <p>March 25, 2023</p>
+            </div>
           </div>
         </div>
         <div class="col-12 col-md-4 col-lg-3">
-          <div class="categories-teaser">
-            <img src="images/marc-mintel-nSy6EkPBwe8-unsplashnew.jpg" />
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/martin-sanchez-hl3av6oAURg-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                10 architectural gems that are bookable on Airbnb
+              </a>
+              <p>March 15, 2023</p>
+            </div>
           </div>
-          <div class="categories-article">
-            <a
-              class="categories-link"
-              href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
-            >
-              Introducing our 2023 Airbnb Style
-            </a>
-            <p>March 1, 2023</p>
+        </div>
+
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/clay-banks-V-v_DBDtFIc-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Design on a dime: The top private rooms and Design listings
+                under $100
+              </a>
+              <p>March 12, 2023</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/andrea-davis-1uNh3B3ppl4-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Give Mae the evening off and spend the night at Ted Lasso’s
+                favorite place
+              </a>
+              <p>March 7 2023</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/alexa-west-dUPfhP18dPI-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                New rural travel data in North Carolina shows economic benefits
+                of hosting
+              </a>
+              <p>March 4, 2023</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-lg-3">
+          <div class="row no-gutters mb-2">
+            <div class="categories-teaser col-6 col-md-12">
+              <img
+                src="images/marc-mintel-nSy6EkPBwe8-unsplashnew.jpg"
+                class="img-fluid"
+              />
+            </div>
+            <div class="categories-article col-6 col-md-12 px-0 px-md-3">
+              <a
+                class="categories-link"
+                href="https://news.airbnb.com/dream-big-on-north-carolinas-northeast-lakes-and-rivers-this-summer/"
+              >
+                Introducing our 2023 Airbnb Style
+              </a>
+              <p>March 1, 2023</p>
+            </div>
           </div>
         </div>
         <div class="col-12">
